Add "check_mysql_query" CheckCommand definition
fixes #12314

Signed-off-by: Gunnar Beutner <gunnar.beutner@netways.de>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -2255,3 +2255,25 @@ object CheckCommand "game" {
 		}
 	}
 }
+
+object CheckCommand "mysql_query" {
+	import "plugin-check-command"
+	import "ipv4-or-ipv6"
+
+	command = [ PluginDir + "/check_mysql_query" ]
+
+	arguments = {
+		"-H" = "$mysql_query_hostname$"
+		"-P" = "$mysql_query_port$"
+		"-u" = "$mysql_query_username$"
+		"-p" = "$mysql_query_password$"
+		"-d" = "$mysql_query_database$"
+		"-f" = "$mysql_query_file$"
+		"-g" = "$mysql_query_group$"
+		"-q" = "$mysql_query_execute$"
+		"-w" = "$mysql_query_warning$"
+		"-c" = "$mysql_query_critical$"
+	}
+
+	vars.mysql_query_hostname = "$check_address$"
+}
