Add the "exception" check command
refs #10075

--- a/itl/command-icinga.conf
+++ b/itl/command-icinga.conf
@@ -34,3 +34,7 @@ object CheckCommand "cluster-zone" {
 object CheckCommand "random" {
 	import "random-check-command"
 }
+
+object CheckCommand "exception" {
+	import "exception-check-command"
+}
