Move internal script functions into the 'Internal' namespace
fixes #12338

--- a/lib/db_ido/db_ido-itl.conf
+++ b/lib/db_ido/db_ido-itl.conf
@@ -17,10 +17,12 @@
  * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.             *
  ******************************************************************************/
 
-template CheckCommand "ido-check-command" {
-	execute = IdoCheck
-}
+assert(Internal.run_with_activation_context(function() {
+	template CheckCommand "ido-check-command" {
+		execute = Internal.IdoCheck
+	}
 
-object CheckCommand "ido" {
-	import "ido-check-command"
-}
+	object CheckCommand "ido" {
+		import "ido-check-command"
+	}
+}))
