--- a/lib/icinga/icinga-itl.conf
+++ b/lib/icinga/icinga-itl.conf
@@ -17,6 +17,8 @@
  * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.             *
  ******************************************************************************/
 
-template TimePeriod "legacy-timeperiod" {
-	update = LegacyTimePeriod
-}
+assert(Internal.run_with_activation_context(function() {
+	template TimePeriod "legacy-timeperiod" {
+		update = Internal.LegacyTimePeriod
+	}
+}))
