--- a/lib/methods/methods-itl.conf
+++ b/lib/methods/methods-itl.conf
@@ -17,38 +17,40 @@
  * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.             *
  ******************************************************************************/
 
-template CheckCommand "icinga-check-command" {
-	execute = IcingaCheck
-}
+assert(Internal.run_with_activation_context(function() {
+	template CheckCommand "icinga-check-command" {
+		execute = Internal.IcingaCheck
+	}
 
-template CheckCommand "cluster-check-command" {
-	execute = ClusterCheck
-}
+	template CheckCommand "cluster-check-command" {
+		execute = Internal.ClusterCheck
+	}
 
-template CheckCommand "cluster-zone-check-command" {
-	execute = ClusterZoneCheck
-}
+	template CheckCommand "cluster-zone-check-command" {
+		execute = Internal.ClusterZoneCheck
+	}
 
-template CheckCommand "plugin-check-command" {
-	execute = PluginCheck
-}
+	template CheckCommand "plugin-check-command" {
+		execute = Internal.PluginCheck
+	}
 
-template CheckCommand "clr-check-command" {
-	execute = ClrCheck
-}
+	template CheckCommand "clr-check-command" {
+		execute = Internal.ClrCheck
+	}
 
-template NotificationCommand "plugin-notification-command" {
-	execute = PluginNotification
-}
+	template NotificationCommand "plugin-notification-command" {
+		execute = Internal.PluginNotification
+	}
 
-template EventCommand "plugin-event-command" {
-	execute = PluginEvent
-}
+	template EventCommand "plugin-event-command" {
+		execute = Internal.PluginEvent
+	}
 
-template CheckCommand "random-check-command" {
-	execute = RandomCheck
-}
+	template CheckCommand "random-check-command" {
+		execute = Internal.RandomCheck
+	}
 
-template CheckCommand "exception-check-command" {
-	execute = ExceptionCheck
-}
+	template CheckCommand "exception-check-command" {
+		execute = Internal.ExceptionCheck
+	}
+}))
