ITL: Add db2_health CheckCommand definition
fixes #12061

--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -246,6 +246,97 @@ object CheckCommand "mysql_health" {
 	vars.mysql_health_hostname = "$check_address$"
 }
 
+object CheckCommand "db2_health" {
+        import "plugin-check-command"
+
+        command = [ PluginContribDir + "/check_db2_health" ]
+
+        arguments = {
+                "--hostname" = {
+                        value = "$db2_health_hostname$"
+                        description = "the host to connect"
+                        order = -2
+                }
+                "--database" = {
+                        value = "$db2_health_database$"
+                        description = "the database to connect"
+                        order = 0
+                }
+                "--username" = {
+                        value = "$db2_health_username$"
+                        description = "the db2 user"
+                        order = 1
+                }
+                "--password" = {
+                        value = "$db2_health_password$"
+                        description = "the db2 user's password"
+                        order = 2
+                }
+                "--port" = {
+                        value = "$db2_health_port$"
+                        description = "the db2 port for connection"
+                        order = -1
+                }
+                "--warning" = {
+                        value = "$db2_health_warning$"
+                        description = "the warning range"
+                        order = 5
+                }
+                "--critical" = {
+                        value = "$db2_health_critical$"
+                        description = "the critical range"
+                        order = 6
+                }
+                "--mode" = {
+                        value = "$db2_health_mode$"
+                        description = "the mode of the plugin"
+                        order = 3
+                }
+                "--name" = {
+                        value = "$db2_health_name$"
+                        description = "the name of the tablespace, datafile, wait event, latch, enqueue, or sql statement depending on the mode"
+                        order = 4
+                }
+                "--name2" = {
+                        value = "$db2_health_name2$"
+                        description = "if name is a sql statement, name2 can be used to appear in the output and the performance data"
+                        order = 7
+                }
+                "--regexp" = {
+                        set_if = "$db2_health_regexp$"
+                        description = "name will be interpreted as a regular expression"
+                }
+                "--units" = {
+                        value = "$db2_health_units$"
+                        description = "This is used for a better output of mode=sql and for specifying thresholds for mode=tablespace-free"
+                }
+                "--maxinactivity" = {
+                        value = "$db2_health_maxinactivity$"
+                        description = "used for the maximum amount of time a certain event has not happened."
+                }
+		"--mitigation" = {
+                        value = "$db2_health_mitigation$"
+                        description = "let you classify the severity of an offline tablespace."
+                }
+                "--lookback" = {
+                        value = "$db2_health_lookback$"
+                        description = "How many days iin the past db2_health check should look back to calculate exitcode."
+                }
+
+        }
+
+        env = {
+                "DB2_HOME" = "$db2_health_env_db2_home$"
+                "DB2_VERSION" = "$db2_health_env_db2_version$"
+        }
+
+        vars.db2_health_regexp = false
+        vars.db2_health_hostname = "$check_address$"
+
+        vars.db2_health_env_db2_home = "/opt/ibm/db2/V10.5"
+        vars.db2_health_env_db2_version = "10.5"
+}
+
 object CheckCommand "oracle_health" {
 	import "plugin-check-command"
 
