Add vars for all check_swap args

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1256,12 +1256,18 @@ object CheckCommand "swap" {
 	command = [ PluginDir + "/check_swap" ]
 
 	arguments = {
-		"-w" = "$swap_wfree$%"
-		"-c" = "$swap_cfree$%"
+		"-w" = "$swap_wfree$"
+		"-c" = "$swap_cfree$"
+		"-a" = {
+			set_if = "$swap_allswaps$"
+		}
+		"-n" = "$swap_noswap$"
 	}
 
-	vars.swap_wfree = 50
-	vars.swap_cfree = 25
+	vars.swap_wfree = "50%"
+	vars.swap_cfree = "25%"
+	vars.swap_allswaps = false
+	vars.swap_noswap = "critical"
 }
 
 object CheckCommand "load" {
