Add backwards compatibility for existing configs that use check_swap

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1256,8 +1256,20 @@ object CheckCommand "swap" {
 	command = [ PluginDir + "/check_swap" ]
 
 	arguments = {
-		"-w" = "$swap_wfree$"
-		"-c" = "$swap_cfree$"
+		"-w" = {{
+			if (macro("$swap_integer$") {
+				return macro("$swap_wfree$");
+			} else {
+				return macro("$swap_wfree$%")
+			}
+		}}
+		"-c" = {{
+			if (macro("$swap_integer$") {
+				return macro("$swap_cfree$");
+			} else {
+				return macro("$swap_cfree$%")
+			}
+		}}
 		"-a" = {
 			set_if = "$swap_allswaps$"
 		}
@@ -1266,6 +1278,7 @@ object CheckCommand "swap" {
 
 	vars.swap_wfree = "50%"
 	vars.swap_cfree = "25%"
+	vars.swap_integer = false
 	vars.swap_allswaps = false
 	vars.swap_noswap = "critical"
 }
