Register deprecated methods in the 'Deprecated' namespace
refs #12408

--- a/lib/db_ido/db_ido-itl.conf
+++ b/lib/db_ido/db_ido-itl.conf
@@ -18,11 +18,21 @@
  ******************************************************************************/
 
 assert(Internal.run_with_activation_context(function() {
+	var _Internal = Internal.clone()
+
 	template CheckCommand "ido-check-command" {
-		execute = Internal.IdoCheck
+		execute = _Internal.IdoCheck
 	}
 
-	object CheckCommand "ido" {
+	object CheckCommand "ido" use (_Internal) {
 		import "ido-check-command"
 	}
 }))
+
+var methods = [
+	"IdoCheck"
+]
+
+for (method in methods) {
+	Internal.remove(method)
+}
