--- a/lib/icinga/icinga-itl.conf
+++ b/lib/icinga/icinga-itl.conf
@@ -18,7 +18,17 @@
  ******************************************************************************/
 
 assert(Internal.run_with_activation_context(function() {
-	template TimePeriod "legacy-timeperiod" {
-		update = Internal.LegacyTimePeriod
+	var _Internal = Internal.clone()
+
+	template TimePeriod "legacy-timeperiod" use (_Internal) {
+		update = _Internal.LegacyTimePeriod
 	}
 }))
+
+var methods = [
+	"LegacyTimePeriod"
+]
+
+for (method in methods) {
+	Internal.remove(method)
+}
