--- a/lib/methods/methods-itl.conf
+++ b/lib/methods/methods-itl.conf
@@ -18,39 +18,77 @@
  ******************************************************************************/
 
 assert(Internal.run_with_activation_context(function() {
-	template CheckCommand "icinga-check-command" {
-		execute = Internal.IcingaCheck
+	var _Internal = Internal.clone()
+
+	template CheckCommand "icinga-check-command" use (_Internal) {
+		execute = _Internal.IcingaCheck
 	}
 
-	template CheckCommand "cluster-check-command" {
-		execute = Internal.ClusterCheck
+	template CheckCommand "cluster-check-command" use (_Internal) {
+		execute = _Internal.ClusterCheck
 	}
 
-	template CheckCommand "cluster-zone-check-command" {
-		execute = Internal.ClusterZoneCheck
+	template CheckCommand "cluster-zone-check-command" use (_Internal) {
+		execute = _Internal.ClusterZoneCheck
 	}
 
-	template CheckCommand "plugin-check-command" {
-		execute = Internal.PluginCheck
+	template CheckCommand "plugin-check-command" use (_Internal) {
+		execute = _Internal.PluginCheck
 	}
 
-	template CheckCommand "clr-check-command" {
-		execute = Internal.ClrCheck
+	template CheckCommand "clr-check-command" use (_Internal) {
+		execute = _Internal.ClrCheck
 	}
 
-	template NotificationCommand "plugin-notification-command" {
-		execute = Internal.PluginNotification
+	template NotificationCommand "plugin-notification-command" use (_Internal) {
+		execute = _Internal.PluginNotification
 	}
 
-	template EventCommand "plugin-event-command" {
-		execute = Internal.PluginEvent
+	template EventCommand "plugin-event-command" use (_Internal) {
+		execute = _Internal.PluginEvent
 	}
 
-	template CheckCommand "random-check-command" {
-		execute = Internal.RandomCheck
+	template CheckCommand "random-check-command" use (_Internal) {
+		execute = _Internal.RandomCheck
 	}
 
-	template CheckCommand "exception-check-command" {
-		execute = Internal.ExceptionCheck
+	template CheckCommand "exception-check-command" use (_Internal) {
+		execute = _Internal.ExceptionCheck
+	}
+
+	template CheckCommand "null-check-command" use (_Internal) {
+		execute = _Internal.NullCheck
+	}
+
+	template EventCommand "null-event-command" use (_Internal) {
+		execute = _Internal.NullEvent
+	}
+
+	template TimePeriod "empty-timeperiod" use (_Internal) {
+		execute = _Internal.EmptyTimePeriod
+	}
+
+	template TimePeriod "even-minutes-timeperiod" use (_Internal) {
+		execute = _Internal.EvenMinutesTimePeriod
 	}
 }))
+
+var methods = [
+	"IcingaCheck",
+	"ClusterCheck",
+	"ClusterZoneCheck",
+	"PluginCheck",
+	"ClrCheck",
+	"PluginNotification",
+	"PluginEvent",
+	"RandomCheck",
+	"ExceptionCheck",
+	"NullCheck",
+	"NullEvent",
+	"EmptyTimePeriod",
+	"EvenMinutesTimePeriod"
+]
+
+for (method in methods) {
+	Internal.remove(method)
+}
