--- a/lib/methods/methods-itl.conf
+++ b/lib/methods/methods-itl.conf
@@ -17,7 +17,7 @@
  * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.             *
  ******************************************************************************/
 
-assert(Internal.run_with_activation_context(function() {
+System.assert(Internal.run_with_activation_context(function() {
 	var _Internal = Internal.clone()
 
 	template CheckCommand "icinga-check-command" use (_Internal) {
