Add documentation for swap CheckCommand parameters
fixes #12392

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1272,8 +1272,12 @@ object CheckCommand "swap" {
 		}}
 		"-a" = {
 			set_if = "$swap_allswaps$"
+			description = "Resulting state when there is no swap regardless of thresholds. Possible values are \"ok\", \"warning\", \"critical\", \"unknown\". Defaults to \"critical\""
 		}
-		"-n" = "$swap_noswap$"
+		"-n" = {
+			value = "$swap_noswap$"
+			description = "Conduct comparisons for all swap partitions, one by one"
+		}
 	}
 
 	vars.swap_wfree = "50%"
