ITL: Fix the description for http_certificate
fixes #12416

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -366,7 +366,7 @@ object CheckCommand "http" {
 		}
 		"-C" = {
 			value = "$http_certificate$"
-			description = "Minimum number of days a certificate has to be valid. Port defaults to 443."
+			description = "Minimum number of days a certificate has to be valid. This parameter explicitely sets the port to 443 and ignores the URL if passed."
 		}
 		"-J" = {
 			value = "$http_clientcert$"
