Docs: Rewrite cluster and client chapter from scratch; add service monitoring chapter
Also apply a new structure.

Deleted the old cluster and client documentation and started "fresh".

This commit also includes various images used in the newly written
"Distributed Monitoring" chapter for better understanding.

fixes #12386

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,26 +6,25 @@ pages:
 - [2-getting-started.md, Getting Started]
 - [3-monitoring-basics.md, Monitoring Basics]
 - [4-configuring-icinga-2.md, Configuring Icinga 2]
-- [5-advanced-topics.md, Advanced Topics]
-- [6-object-types.md, Object Types]
-- [7-icinga-template-library.md, Icinga Template Library]
-- [8-cli-commands.md, CLI Commands]
-- [9-icinga2-api.md, Icinga 2 API]
-- [10-monitoring-remote-systems.md, Monitoring Remote Systems]
-- [11-icinga2-client.md, Icinga 2 Client]
-- [12-agent-based-checks.md, Additional Agent-based Checks]
-- [13-distributed-monitoring-ha.md, Distributed Monitoring and High Availability]
-- [14-addons-plugins.md, Addons and Plugins]
-- [15-features.md, Features]
-- [16-troubleshooting.md, Troubleshooting]
-- [17-upgrading-icinga-2.md, Upgrading Icinga 2]
-- [18-language-reference.md, Language Reference]
-- [19-library-reference.md, Library Reference]
-- [20-script-debugger.md, Script Debugger]
-- [21-development.md, Development]
-- [22-selinux.md, SELinux]
-- [23-migrating-from-icinga-1x.md, Migrating from Icinga 1.x]
-- [24-appendix.md, Appendix]
+- [5-service-monitoring.md, Service Monitoring]
+- [6-distributed-monitoring.md, Distributed Monitoring]
+- [7-agent-based-monitoring.md, Agent Based Monitoring]
+- [8-advanced-topics.md, Advanced Topics]
+- [9-object-types.md, Object Types]
+- [10-icinga-template-library.md, Icinga Template Library]
+- [11-cli-commands.md, CLI Commands]
+- [12-icinga2-api.md, Icinga 2 API]
+- [13-addons.md, Addons]
+- [14-features.md, Features]
+- [15-troubleshooting.md, Troubleshooting]
+- [16-upgrading-icinga-2.md, Upgrading Icinga 2]
+- [17-language-reference.md, Language Reference]
+- [18-library-reference.md, Library Reference]
+- [19-script-debugger.md, Script Debugger]
+- [20-development.md, Development]
+- [21-selinux.md, SELinux]
+- [22-migrating-from-icinga-1x.md, Migrating from Icinga 1.x]
+- [23-appendix.md, Appendix]
 theme: readthedocs
 markdown_extensions: [smarty]
 extra_javascript: [scroll.js]
