ITL: Add perfsyntax parameter to nscp-local-counter CheckCommand
fixes #12424

--- a/itl/command-nscp-local.conf
+++ b/itl/command-nscp-local.conf
@@ -253,6 +253,10 @@ object CheckCommand "nscp-local-counter" {
 		"--critical" = {
 			value = "value $nscp_counter_op$ $nscp_counter_critical$"
 		}
+		"perf-syntax" = {
+			value = "perf-syntax=$nscp_counter_perfsyntax$"
+			skip_key = true
+		}
 		"-a" = {
 			value = "$nscp_counter_arguments$"
 			skip_key = true
@@ -270,4 +274,5 @@ object CheckCommand "nscp-local-counter" {
 	vars.nscp_query = "check_pdh"
 	vars.nscp_showall = "$nscp_counter_showall$"
 	vars.nscp_counter_less = false
+	vars.nscp_counter_perfsyntax = "$nscp_counter_name$"
 }
