Fix ITL methods templates for timeperiods
fixes #12338

--- a/lib/methods/methods-itl.conf
+++ b/lib/methods/methods-itl.conf
@@ -65,11 +65,11 @@ System.assert(Internal.run_with_activation_context(function() {
 	}
 
 	template TimePeriod "empty-timeperiod" use (_Internal) {
-		execute = _Internal.EmptyTimePeriod
+		update = _Internal.EmptyTimePeriod
 	}
 
 	template TimePeriod "even-minutes-timeperiod" use (_Internal) {
-		execute = _Internal.EvenMinutesTimePeriod
+		update = _Internal.EvenMinutesTimePeriod
 	}
 }))
 
