icinga2.conf: Include plugins-contrib, manubulon, windows-plugins, nscp by default
This helps a lot when configuring client checks as command endpoint
where the check command definitions are both used on the master
and the client.

fixes #10722

--- a/etc/icinga2/icinga2.conf
+++ b/etc/icinga2/icinga2.conf
@@ -25,7 +25,20 @@ include "zones.conf"
  */
 include <itl>
 include <plugins>
-// include <plugins-contrib>
+include <plugins-contrib>
+include <manubulon>
+
+/**
+ * This includes the Icinga 2 Windows plugins. These command definitions
+ * are required on a master node when a client is used as command endpoint.
+ */
+include <windows-plugins>
+
+/**
+ * This includes the NSClient++ check commands. These command definitions
+ * are required on a master node when a client is used as command endpoint.
+ */
+include <nscp>
 
 /**
  * The features-available directory contains a number of configuration
