--- a/etc/icinga2/win32/icinga2.conf
+++ b/etc/icinga2/win32/icinga2.conf
@@ -25,7 +25,8 @@ include "zones.conf"
  */
 include <itl>
 include <plugins>
-// include <plugins-contrib>
+include <plugins-contrib>
+include <manubulon>
 
 /**
  * This includes the Icinga 2 Windows plugins.
@@ -58,4 +59,3 @@ include_recursive "repository.d"
  * directory. Each of these files must have the file extension ".conf".
  */
 include_recursive "conf.d"
-
