Add interfacetable CheckCommand options --trafficwithpkt and --snmp-maxmsgsize
fixes #12468

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/itl/plugins-contrib.d/network-components.conf
+++ b/itl/plugins-contrib.d/network-components.conf
@@ -71,6 +71,10 @@ object CheckCommand "interfacetable" {
 			set_if = "$interfacetable_pkt$"
 			description = "Add unicast/non-unicast pkt stats for each interface"
 		}
+		"--trafficwithpkt" = {
+			set_if = "$interfacetable_trafficwithpkt$"
+			description = "Enable traffic calculation using pkt counters instead of octet counters. Useful when using 32-bit counters to track the load on > 1GbE interfaces."
+		}
 		"--tp" = {
 			value = "$interfacetable_trackproperty$"
 			description = "List of tracked properties"
@@ -142,6 +146,10 @@ object CheckCommand "interfacetable" {
 		"--snmp-retries" = {
 			value = "$interfacetable_snmpretries$"
 			description = "Define the number of times to retry sending a SNMP message"
+		}
+		"--snmp-maxmsgsize" = {
+			value = "$interfacetable_snmpmaxmsgsize$"
+			description = "Size of the SNMP message in octets, usefull in case of too long responses. Be carefull with network filters. Range 484 - 65535. Apply only to netsnmp perl bindings. The default is 1472 octets for UDP/IPv4, 1452 octets for UDP/IPv6, 1460 octets for TCP/IPv4, and 1440 octets for TCP/IPv6."
 		}
 		"--unixsnmp" = {
 			set_if = "$interfacetable_unixsnmp$"
@@ -276,6 +284,7 @@ object CheckCommand "interfacetable" {
 	vars.interfacetable_outputshort = false
 	vars.interfacetable_aliasmatching = false
 	vars.interfacetable_pkt = false
+	vars.interfacetable_trafficwithpkt = false
 	vars.interfacetable_snmpv2 = false
 	vars.interfacetable_64bits = false
 	vars.interfacetable_unixsnmp = false
