Make "clr-check-command" template usable on *nix
fixes #12474

--- a/lib/methods/methods-itl.conf
+++ b/lib/methods/methods-itl.conf
@@ -37,7 +37,11 @@ System.assert(Internal.run_with_activation_context(function() {
 	}
 
 	template CheckCommand "clr-check-command" use (_Internal) {
-		execute = _Internal.ClrCheck
+		if (_Internal.ClrCheck) {
+			execute = _Internal.ClrCheck
+		} else {
+			execute = _Internal.NullCheck
+		}
 	}
 
 	template NotificationCommand "plugin-notification-command" use (_Internal) {
