Fix missing constants on Windows
refs #10722

--- a/etc/icinga2/win32/constants.conf
+++ b/etc/icinga2/win32/constants.conf
@@ -6,11 +6,15 @@
 /* The directory which contains the plugins from the Monitoring Plugins project. */
 const PluginDir = PrefixDir + "/sbin"
 
-
 /* The directory which contains the Manubulon plugins.
  * Check the documentation, chapter "SNMP Manubulon Plugin Check Commands", for details.
  */
 const ManubulonPluginDir = PrefixDir + "/sbin"
+
+/* The directory which you use to store additional plugins which ITL provides user contributed command definitions for.
+ * Check the documentation, chapter "Plugins Contribution", for details.
+ */
+const PluginContribDir = PrefixDir + "/sbin"
 
 /* Our local instance name. By default this is the server's hostname as returned by `hostname --fqdn`.
  * This should be the common name from the API certificate.
