Add the possibility for all ...soap-host... checkcommands to specify a datacenter/vsphere server in case the check should be done through that server
fixes #12516

Signed-off-by: Gunnar Beutner <gunnar.beutner@netways.de>

--- a/itl/plugins-contrib.d/vmware.conf
+++ b/itl/plugins-contrib.d/vmware.conf
@@ -269,6 +269,11 @@ template CheckCommand "vmware-esx-soap-host" {
 			required = true
 			description = "ESX or ESXi hostname."
 		}
+		"--datacenter" = {
+			value = "$vmware_datacenter$"
+			required = false
+			description = "Datacenter/Vcenter hostname."
+		}
 		"--sslport" = {
 			value = "$vmware_sslport$"
 			description = "If a SSL port different from 443 is used."
