Add the possibility for all ...-dc... checkcommands to specify a cluster name
fixes #12519

Signed-off-by: Gunnar Beutner <gunnar.beutner@netways.de>

--- a/itl/plugins-contrib.d/vmware.conf
+++ b/itl/plugins-contrib.d/vmware.conf
@@ -89,6 +89,11 @@ template CheckCommand "vmware-esx-dc" {
 			required = true
 			description = "Datacenter/Vcenter hostname."
 		}
+		"--cluster" = {
+			value = "$vmware_cluster$"
+			required = false
+			description = "ESX or ESXi clustername."
+		}
 		"--sslport" = {
 			value = "$vmware_sslport$"
 			description = "If a SSL port different from 443 is used."
