Implement unit tests for state changes
fixes #12530

--- a/lib/config/CMakeLists.txt
+++ b/lib/config/CMakeLists.txt
@@ -41,7 +41,7 @@ set(config_SOURCES
 )
 
 if(ICINGA2_UNITY_BUILD)
-    mkunity_target(config config_SOURCES)
+    mkunity_target(config config config_SOURCES)
 endif()
 
 add_library(config SHARED ${config_SOURCES})
