--- a/lib/methods/CMakeLists.txt
+++ b/lib/methods/CMakeLists.txt
@@ -31,7 +31,7 @@ set(methods_SOURCES
 )
 
 if(ICINGA2_UNITY_BUILD)
-    mkunity_target(methods methods_SOURCES)
+    mkunity_target(methods methods methods_SOURCES)
 endif()
 
 add_library(methods SHARED ${methods_SOURCES})
