--- a/lib/perfdata/CMakeLists.txt
+++ b/lib/perfdata/CMakeLists.txt
@@ -26,7 +26,7 @@ set(perfdata_SOURCES
 )
 
 if(ICINGA2_UNITY_BUILD)
-    mkunity_target(perfdata perfdata_SOURCES)
+    mkunity_target(perfdata perfdata perfdata_SOURCES)
 endif()
 
 add_library(perfdata SHARED ${perfdata_SOURCES})
