--- a/lib/cli/CMakeLists.txt
+++ b/lib/cli/CMakeLists.txt
@@ -32,7 +32,7 @@ set(cli_SOURCES
 )
 
 if(ICINGA2_UNITY_BUILD)
-    mkunity_target(cli cli_SOURCES)
+    mkunity_target(cli cli cli_SOURCES)
 endif()
 
 add_library(cli SHARED ${cli_SOURCES})
