--- a/lib/compat/CMakeLists.txt
+++ b/lib/compat/CMakeLists.txt
@@ -27,7 +27,7 @@ set(compat_SOURCES
 )
 
 if(ICINGA2_UNITY_BUILD)
-    mkunity_target(compat compat_SOURCES)
+    mkunity_target(compat compat compat_SOURCES)
 endif()
 
 add_library(compat SHARED ${compat_SOURCES})
