--- a/lib/db_ido_mysql/CMakeLists.txt
+++ b/lib/db_ido_mysql/CMakeLists.txt
@@ -25,7 +25,7 @@ if(MYSQL_FOUND)
   )
 
   if(ICINGA2_UNITY_BUILD)
-      mkunity_target(db_ido_mysql db_ido_mysql_SOURCES)
+      mkunity_target(db_ido_mysql db_ido_mysql db_ido_mysql_SOURCES)
   endif()
 
   add_library(db_ido_mysql SHARED ${db_ido_mysql_SOURCES})
