--- a/lib/demo/CMakeLists.txt
+++ b/lib/demo/CMakeLists.txt
@@ -22,7 +22,7 @@ set(demo_SOURCES
 )
 
 if(ICINGA2_UNITY_BUILD)
-    mkunity_target(demo demo_SOURCES)
+    mkunity_target(demo demo demo_SOURCES)
 endif()
 
 add_library(demo SHARED ${demo_SOURCES})
