--- a/lib/notification/CMakeLists.txt
+++ b/lib/notification/CMakeLists.txt
@@ -22,7 +22,7 @@ set(notification_SOURCES
 )
 
 if(ICINGA2_UNITY_BUILD)
-    mkunity_target(notification notification_SOURCES)
+    mkunity_target(notification notification notification_SOURCES)
 endif()
 
 add_library(notification SHARED ${notification_SOURCES})
