Implement support for default templates
fixes #12575

--- a/lib/icinga/icinga-itl.conf
+++ b/lib/icinga/icinga-itl.conf
@@ -20,7 +20,7 @@
 System.assert(Internal.run_with_activation_context(function() {
 	var _Internal = Internal.clone()
 
-	template TimePeriod "legacy-timeperiod" use (_Internal) {
+	template TimePeriod "legacy-timeperiod" use (_Internal) default {
 		update = _Internal.LegacyTimePeriod
 	}
 }))
