--- a/lib/methods/methods-itl.conf
+++ b/lib/methods/methods-itl.conf
@@ -32,7 +32,7 @@ System.assert(Internal.run_with_activation_context(function() {
 		execute = _Internal.ClusterZoneCheck
 	}
 
-	template CheckCommand "plugin-check-command" use (_Internal) {
+	template CheckCommand "plugin-check-command" use (_Internal) default {
 		execute = _Internal.PluginCheck
 	}
 
@@ -44,11 +44,11 @@ System.assert(Internal.run_with_activation_context(function() {
 		}
 	}
 
-	template NotificationCommand "plugin-notification-command" use (_Internal) {
+	template NotificationCommand "plugin-notification-command" use (_Internal) default {
 		execute = _Internal.PluginNotification
 	}
 
-	template EventCommand "plugin-event-command" use (_Internal) {
+	template EventCommand "plugin-event-command" use (_Internal) default {
 		execute = _Internal.PluginEvent
 	}
 
