Remove unnecessary imports from unit test config
refs #12575

--- a/lib/db_ido/db_ido-itl.conf
+++ b/lib/db_ido/db_ido-itl.conf
@@ -20,11 +20,11 @@
 System.assert(Internal.run_with_activation_context(function() {
 	var _Internal = Internal.clone()
 
-	template CheckCommand "ido-check-command" {
+	template CheckCommand "ido-check-command" use (_Internal) {
 		execute = _Internal.IdoCheck
 	}
 
-	object CheckCommand "ido" use (_Internal) {
+	object CheckCommand "ido" {
 		import "ido-check-command"
 	}
 }))
