Adds bool switch for procurve / HP memory to the "snmp-memory" check command
fixes #12586

Signed-off-by: Gunnar Beutner <gunnar.beutner@netways.de>

--- a/itl/command-plugins-manubulon.conf
+++ b/itl/command-plugins-manubulon.conf
@@ -113,6 +113,10 @@ object CheckCommand "snmp-memory" {
 			set_if = "$snmp_is_cisco$"
 			description = "check cisco memory (sum of all memory pools)"
 		}
+		"-E" = {
+			set_if = "$snmp_is_hp$"
+			description = "check HP / Procurve memory"
+		}
 	}
 
 	vars.snmp_warn = "94,50"
