ITL: Fix typo in glusterfs CheckCommand definition
refs #12040

--- a/itl/plugins-contrib.d/storage.conf
+++ b/itl/plugins-contrib.d/storage.conf
@@ -54,5 +54,5 @@ object CheckCommand "glusterfs" {
 	vars.glusterfs_disk_warning = 90
 	vars.glusterfs_disk_critical = 95
 	vars.glusterfs_inode_warning = 90
-	vars.glusterfs_inod_critical = 95
+	vars.glusterfs_inode_critical = 95
 }
