--- a/itl/plugins-contrib.d/operating-system.conf
+++ b/itl/plugins-contrib.d/operating-system.conf
@@ -147,3 +147,41 @@ object CheckCommand "iostat" {
 	vars.iostat_cread = 200
 	vars.iostat_cwrite = 200
 }
+
+object CheckCommand "iostats" {
+        import "plugin-check-command"
+        command = [ PluginContribDir + "/check_iostats" ]
+        arguments = {
+                "-d" = {
+                        value = "$iostats_disk$"
+                        description = "Device to check without path. e.g. sda"
+                }
+                "-w" = {
+                        value ="$iostats_warning_tps$,$iostats_warning_read$,$iostats_warning_write$"
+                        description = "Sets the WARNING level for tps, KB_read/s and KB_written/s, respectively"
+                }
+                "-c" = {
+                        value ="$iostats_critical_tps$,$iostats_critical_read$,$iostats_critical_write$"
+                        description = "Sets the CRITICAL level for tps, KB_read/s and KB_written/s, respectively"
+                }
+                "-W" = {
+                        value ="$iostats_warning_wait$"
+                        description = "Sets the WARNING level for iowait"
+                }
+
+                "-C" = {
+                        value ="$iostats_critical_wait$"
+                        description = "Sets the CRITICAL level for iowait"
+                }
+        }
+
+        vars.iostats_disk = "sda"
+        vars.iostats_warning_tps = 3000
+        vars.iostats_warning_read = 50000
+        vars.iostats_warning_write = 10000
+        vars.iostats_warning_wait = 50
+        vars.iostats_critical_tps = 5000
+        vars.iostats_critical_read = 80000
+        vars.iostats_critical_write = 25000
+        vars.iostats_critical_wait = 80
+}
